# netbox-kickstart-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
netbox_kickstart_generator/: __init__.py  default_settings.py
netbox_kickstart_generator/templates/: default.ks  ifcfg.j2  test.ks
